Changes kryonetty-0.10.jar